@@ -62,17 +62,19 @@
             <cruisecontrol:link id="baseUrl" />
             <tr><td><a class="link" href="<%=baseUrl%>">Latest Build</a></td></tr>
             <cruisecontrol:nav startingBuildNumber="0" finalBuildNumber="10" >
-                <tr><td><a class="link" href="<%= url %>"><%= linktext %></a></td></tr>
+              <tr><td><a class="link" href="<%= url %>"><%= linktext %></a></td></tr>
             </cruisecontrol:nav>
-            <tr><td>
-              <form method="GET" action="<%=baseUrl%>" >
-                <select name="log" onchange="form.submit()">
-                  <cruisecontrol:nav startingBuildNumber="10">
-                    <option value="<%=logfile%>"><%= linktext %></option>
-                  </cruisecontrol:nav>
-                </select>
-              </form>
-            </td></tr>
+            <cruisecontrol:nav startingBuildNumber="10" finalBuildNumber="10">
+              <tr><td>
+                <form method="GET" action="<%=baseUrl%>" >
+                  <select name="log" onchange="form.submit()">
+                    <cruisecontrol:nav startingBuildNumber="10">
+                      <option value="<%=logfile%>"><%= linktext %></option>
+                    </cruisecontrol:nav>
+                  </select>
+                </form>
+              </td></tr>
+            </cruisecontrol:nav>
             <tr><td>&nbsp;</td></tr>
 
             <tr><td><a href="rss/<%= request.getPathInfo().substring(1) %>"><img border="0" src="images/rss.png"/></a></td></tr>
